working permissions and page flow

--- a/WBV/Views/Home/Index.cshtml
+++ b/WBV/Views/Home/Index.cshtml
@@ -87,6 +87,6 @@
 </script>
 <script type="text/template" id="friend-listitem-template">
   <a class="listbutton">
-    <span class="label first last"><%= name %></span><span class="rarrow">&raquo</span>
+    <span class="label first last"><img class="floatLeft" style="margin-right:1em;" src="<%= pic_square %>"/><%= name %> (<%= birthday_date %>)</span><span class="rarrow">&raquo</span>
   </a>
 </script>
