--- a/WBV/Content/Site.css
+++ b/WBV/Content/Site.css
@@ -23,8 +23,8 @@ body {font: 16px/1.231 sans-serif;min-height:100%;overflow-x:hidden;}
 /* -------------------------------- ELEMENTS -------------------------------- */
 
 .listview {list-style-type: none}
-.listview a {background:white;display:inline-block;border:2px solid #777;margin:.5em 0;text-decoration:none;color:Black;position:relative;width:100%;cursor:pointer;overflow: hidden;}
-.listview a .label{padding:0 1em;line-height: 2.5em;display:block;overflow: hidden;     
+.listview .listbutton {background:white;display:inline-block;border:2px solid #777;margin:.5em 0;text-decoration:none;color:Black;position:relative;width:100%;cursor:pointer;overflow: hidden;}
+.listview .listbutton .label{padding:0 1em;line-height: 2.5em;display:block;overflow: hidden;     
   word-wrap: no-break;
   white-space:nowrap;
   text-overflow: ellipsis;
@@ -89,7 +89,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', end
   text-decoration: none;
   vertical-align: middle;
   font-size:1.2em;
-   }
+  -moz-user-select: -moz-none;
+  -webkit-user-select: none;
+  user-select: none;
+  -moz-user-drag: -moz-none;
+  -webkit-user-drag: none;
+  user-drag: none;
+}
 button:hover {
     background: rgb(73,155,234); /* Old browsers */
    }
@@ -98,7 +104,7 @@ button:active {
    }
 
 
-
+.error {display: block;color: red;text-shadow: 0 1px 1px rgba(0, 0, 0, .4);font-weight: bold;}
 .hidden {display:none !important}
 .invisible {visibility:hidden !important}
 .floatLeft {float:left !important}
