--- a/WBV/Views/Shared/_Layout.cshtml
+++ b/WBV/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="shortcut icon" href="static/favicon.ico">
     <link rel="apple-touch-icon" href="static/apple-touch-icon.png">
-    <link rel="stylesheet" href="Content/Site.css" />
+    <link rel="stylesheet" href="/Content/Site.css" />
 </head>
 
 <body>
@@ -47,9 +47,9 @@
     };
     yepnope({
       test: support['cssTransitions'],
-      yep: 'Scripts/libs.js',
-      nope: 'Scripts/libs.ie.js',
-      both: ['Scripts/backbone-min.js', 'Scripts/sprints8.js', 'Scripts/ziftly.js'],
+      yep: '/Scripts/libs.js',
+      nope: '/Scripts/libs.ie.js',
+      both: ['/Scripts/backbone-min.js', '/Scripts/sprints8.js', '/Scripts/ziftly.js'],
       complete: function(){ziftly("@ViewBag.AccessToken");}
     });
   </script>
