--- a/WBV/Views/Home/Index.cshtml
+++ b/WBV/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
       
       <div style="margin-top:4em;text-align:center">You need to login with facebook!</div>
       <div style="margin-top:4em">
-        <p><button class="first last fbloginbutton">Login</button></p>
+        <p><a class="first last fbloginbutton button">Login</a></p>
       </div>
     </div>
     <div class="footer">
@@ -65,10 +65,12 @@
     <div class="header clearfix"><h1>Send the Gift</h1></div>
     <div class="content">
       <ul style="margin-top:2em;" id="gift-info" class="listview"></ul>
-      <h1 style="text-align:center;margin-top:2em;">enter an email address!</h1>
-      <div style="margin-top:1em;text-align:center"><input type="email" placeholder="email address" name="email" id="rcpt-emailaddress" value-"" /></div>
+      <div class="hidden">
+        <h1 style="text-align:center;margin-top:2em;">enter an email address!</h1>
+        <div style="margin-top:1em;text-align:center"><input type="email" placeholder="email address" name="email" id="rcpt-emailaddress" value-"" /></div>
+      </div>
       <div style="margin-top:4em">
-        <p><button class="first last sendgiftbutton">send now</button></p>
+        <p><a class="first last sendgiftbutton button">send now</a></p>
       </div>
     </div>
     <div class="footer">
@@ -87,7 +89,7 @@
         Long and fascinating explanation of what has been done, achieved and how to proceed!
       </div>
       <div style="margin-top:4em">
-        <p><a href="#home" class="first last returnhome">Back to Start</a></p>
+        <p><a href="#home" class="button first last returnhome">Back to Start</a></p>
       </div>
     </div>
     <div class="footer">
