--- a/WBV/Views/Home/Index.cshtml
+++ b/WBV/Views/Home/Index.cshtml
@@ -97,7 +97,21 @@
     </div>
   </div>
   
-
+    <div id="redeempage" data-title="Ziftly - Redeem Your Gift"  class="container bodypage">
+    <div class="header clearfix"><h1>Redeem Your Gift</h1></div>
+    <div class="content">
+      <ul style="margin-top:2em;" id="gift-redeem-info" class="listview"></ul>
+      <div style="margin-top:4em">
+        <p class="loadingsplashdisplay">loading..............</p>
+        <p><a href="#home" class="button first last redeemgift hidden">Redeem Now</a></p>
+        <p><a class="button first last fbloginbutton hidden">Login please</a></p>
+        <p><a class="button first last pleasegoaway hidden">This is not for you, please go away!</a></p>
+      </div>
+    </div>
+    <div class="footer">
+        gifting app
+    </div>
+  </div>
 </div>
 
 <script type="text/template" id="gift-listitem-template">
@@ -121,6 +135,21 @@
     <li>
       <span class="listbutton">
           <span class="label first last"><img class="floatLeft" style="margin-right:1em;" src="<%= recipient.pic_square %>"/><%= recipient.name %> (<%= recipient.birthday_date %>)</span>
+      </span>
+    </li>
+</script>
+
+<script type="text/template" id="gift-redeem-display-template">
+    <li><h1>You've received this gift:</h1></li>
+    <li>
+      <span class="listbutton">
+          <span class="label first last"><%= product.name %></span>
+      </span>
+    </li>
+    <li><h1>from</h1></li>
+    <li>
+      <span class="listbutton">
+          <span class="label first last"><img class="floatLeft" style="margin-right:1em;" src="<%= sender.pic_square %>"/><%= sender.name %></span>
       </span>
     </li>
 </script>
