better redemption view handling, not creating a new view every time

--- a/WBV/Views/Home/Index.cshtml
+++ b/WBV/Views/Home/Index.cshtml
@@ -83,10 +83,10 @@
     <div class="content">
       
       <div style="margin-top:1em;text-align:center">
-        You've done it, the gift has been sent to: <span class-"recipientemail"></span>! You won!
+        The gift has been sent to: <span class-"recipientemail"></span>!
       </div>
       <div style="margin-top:1em;text-align:center">
-        Long and fascinating explanation of what has been done, achieved and how to proceed!
+        Explanation of what has been done, achieved and how to proceed!
       </div>
       <div style="margin-top:4em">
         <p><a href="#home" class="button first last returnhome">Back to Start</a></p>
@@ -102,10 +102,10 @@
     <div class="content">
       <ul style="margin-top:2em;" id="gift-redeem-info" class="listview"></ul>
       <div style="margin-top:4em">
-        <p class="loadingsplashdisplay">loading..............</p>
-        <p><a href="#home" class="button first last redeemgift hidden">Redeem Now</a></p>
-        <p><a class="button first last fbloginbutton hidden">Login please</a></p>
-        <p><a class="button first last pleasegoaway hidden">This is not for you, please go away!</a></p>
+        <p class="hideable loadingsplashdisplay">loading..............</p>
+        <p><a class="hideable button first last redeemgift hidden">Redeem Now</a></p>
+        <p><a class="hideable button first last fbloginbutton hidden">Login please</a></p>
+        <p><a href="#home" class="hideable button first last pleasegoaway hidden">This is not for you, please go away!</a></p>
       </div>
     </div>
     <div class="footer">
