redemption and gift removal

--- a/WBV/Views/Home/Index.cshtml
+++ b/WBV/Views/Home/Index.cshtml
@@ -112,6 +112,25 @@
         gifting app
     </div>
   </div>
+
+    <div id="redemptionpage" data-title="Ziftly - Redeem Your Gift"  class="container bodypage">
+    <div class="header clearfix"><h1>Redeem Your Gift</h1></div>
+    <div class="content">
+      <h1>Below find the redemption code, make sure to show this to the cashier:</h1>
+      <ul class="listview" style="margin-top:2em;">
+        <li class="listbutton"><span class="label">Code: <span class="couponcode"><pre>loading</pre></span></span></li>
+      </ul>
+      <div style="margin-top:4em">
+        <p><a href="#home" class="button first last hideable hidden">Done</a></p>
+      </div>
+    </div>
+    <div class="footer">
+        gifting app
+    </div>
+  </div>
+
+
+
 </div>
 
 <script type="text/template" id="gift-listitem-template">
