simplifying design, adding recipient_name

--- a/WBV/Views/Home/Index.cshtml
+++ b/WBV/Views/Home/Index.cshtml
@@ -83,7 +83,7 @@
     <div class="content">
       
       <div style="margin-top:1em;text-align:center">
-        The gift has been sent to: <span class-"recipientemail"></span>!
+        The gift has been sent to: <span class="recipientname"></span>!
       </div>
       <div style="margin-top:1em;text-align:center">
         Explanation of what has been done, achieved and how to proceed!
