--- a/WBV/Content/Site.css
+++ b/WBV/Content/Site.css
@@ -2,17 +2,7 @@
 html {min-height:100%;}
 body {font: 16px/1.231 sans-serif;min-height:100%;overflow-x:hidden;}
 
-.container {min-height:100%;position:absolute;width:100%;top:0;left:0;display:none;
-  background: #002400; /* Old browsers */
-  background: -moz-linear-gradient(top,  #002400 0%, #005700 13%, #7fdb7f 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#002400), color-stop(13%,#005700), color-stop(100%,#7fdb7f)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #002400 0%,#005700 13%,#7fdb7f 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #002400 0%,#005700 13%,#7fdb7f 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #002400 0%,#005700 13%,#7fdb7f 100%); /* IE10+ */
-  background: linear-gradient(top,  #002400 0%,#005700 13%,#7fdb7f 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002400', endColorstr='#7fdb7f',GradientType=0 ); /* IE6-9 */
-            
-            }
+.container {min-height:100%;position:absolute;width:100%;top:0;left:0;display:none;}
 .container.active-page {display:block}
 .header {color:White;text-align:center;background-color:rgba(0, 0, 0, 0.5);}
 .header h1 {margin: 0 2em;}
@@ -24,7 +14,7 @@ body {font: 16px/1.231 sans-serif;min-height:100%;overflow-x:hidden;}
 
 .listview {list-style-type: none}
 .listview .listbutton {background:white;display:inline-block;border:2px solid #777;margin:.5em 0;text-decoration:none;color:Black;position:relative;width:100%;cursor:pointer;overflow: hidden;}
-.listview .listbutton .label{padding:0 1em;line-height: 2.5em;display:block;overflow: hidden;     
+.listview .listbutton .label{padding:0 1em;line-height: 2.5em;display:block;overflow: hidden;
   word-wrap: no-break;
   white-space:nowrap;
   text-overflow: ellipsis;
@@ -68,16 +58,8 @@ body {font: 16px/1.231 sans-serif;min-height:100%;overflow-x:hidden;}
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
   display:block;text-align:center;margin: 0.5em 0; cursor:pointer;
   border: 2px solid #222;
-background: rgb(73,155,234); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(73,155,234,1)), color-stop(100%,rgba(32,124,229,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(73,155,234,1) 0%,rgba(32,124,229,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(73,155,234,1) 0%,rgba(32,124,229,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(73,155,234,1) 0%,rgba(32,124,229,1) 100%); /* IE10+ */
-background: linear-gradient(top,  rgba(73,155,234,1) 0%,rgba(32,124,229,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#207ce5',GradientType=0 ); /* IE6-9 */
-
-
+  background: black; /* Old browsers */
+  color:White;
 
   padding: .3em 10px;
   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
@@ -97,10 +79,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', end
   user-drag: none;
 }
 .button:hover {
-    background: rgb(73,155,234); /* Old browsers */
+    background: #444; /* Old browsers */
    }
 .button:active {
-   background: #1b435e;
+   background: 777;
    }
 
 
