--- a/WBV/Content/Site.css
+++ b/WBV/Content/Site.css
@@ -21,6 +21,7 @@ body {font: 16px/1.231 sans-serif;min-height:100%;overflow-x:hidden;height:100%;
   -webkit-user-drag: none;
   user-drag: none;
 }
+.listview .listbutton.deactive {cursor:default}
 .listview .listbutton .label{padding:0 1.5em 0 1em;line-height: 2.5em;display:block;overflow: hidden;
   word-wrap: no-break;
   white-space:nowrap;
