--- a/WBV/Content/Site.css
+++ b/WBV/Content/Site.css
@@ -2,8 +2,8 @@
 html {min-height:100%;height:100%;}
 body {font: 16px/1.231 sans-serif;min-height:100%;overflow-x:hidden;height:100%;}
 
-.container {min-height:100%;position:absolute;width:100%;top:0;left:0;display:none;}
-.container.active-page {display:block}
+.container {position:absolute;width:0;top:0;left:0;display:none;z-index:-1;vibility:hidden;height:0;}
+.container.active-page {display:block;z-index:1;vibility:visible;height:0;min-height:100%;width:100%;}
 .header {color:White;text-align:center;background-color:rgba(0, 0, 0, 0.5);}
 .header h1 {margin: 0 2em;}
 .footer{position: absolute;bottom: 0em;left: 0;width: 100%;color: white;text-align: center;height: 2em;line-height: 2em;background: rgba(0, 0, 0, .6);text-shadow: 0 1px 1px rgba(0, 0, 0, .8);}
