adding loading animation for posting process

--- a/WBV/Views/Home/Index.cshtml
+++ b/WBV/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<img src="/Content/loader.gif" class="hidden"/>
 <div class="loadingbackground hidden loading"></div>
 <div class="loading loadingpopup hidden" id="loading_popup">
   <div class="closing_button"><span>x</span></div>
