rewording redemption screen

--- a/WBV/Views/Home/Index.cshtml
+++ b/WBV/Views/Home/Index.cshtml
@@ -118,7 +118,7 @@
     <div id="redemptionpage" data-title="Ziftly - Redeem Your Gift"  class="container bodypage">
     <div class="header clearfix"><h1>Redeem Your Gift</h1></div>
     <div class="content">
-      <h1>Below find the redemption code, make sure to show this to the cashier:</h1>
+      <h1>Here is your voucher code, show this to the gift merchant.</h1>
       <ul class="listview" style="margin-top:2em;">
         <li class="listbutton"><span class="label">Code: <span class="couponcode"><pre>loading</pre></span></span></li>
       </ul>
